<resources>
    <string name="app_name">LearnSummarize</string>

    <string name="about">关于</string>
    <string name="customer_view">自定义View</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="forget_password">忘记密码</string>
    <string name="homepage">首页</string>
    <string name="login">登录</string>
    <string name="my_blog">我的博客</string>
    <string name="other">其他</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="snackbar_demo">Snackbar演示</string>
    <string name="topics_skin">主题换肤</string>
    <string name="username">用户名</string>
    <string name="welfare">福利</string>
    <string name="network_err">访问网络错误</string>
    <string name="empty_no_data">没有数据，点击重试！</string>
    <string name="empty_network_error">网络错误，点击重试！</string>

    <string-array name="common_text">
        <item>估摸不到的未来，估摸不到的生活仍要继续</item>
        <item>你掌心华丽的情色线条纠结进了谁的城池里欢声笑语</item>
        <item>如果说漂亮能当饭吃，那姐能养活全世界</item>
        <item>距离是份考卷，测量相爱的誓言。我们是彼此相爱过，那是段快乐惬意的日子，情是这个世界上最坚贞也最不可靠的东西。时间过了爱情淡了，相爱的人也就散了。即使没有王子，我仍是公主;咖啡仍旧香醇，生活依然美好;就算给我再大的城堡，也不做感情的奴隶;就算没有王子，我仍然是骄傲的公主</item>
        <item>在你开心或悲伤的时候，首先想到的，都是同一个人，那就最完美</item>
        <item>那一场盛世流年，我们守着寂寞伤得面目全非</item>
        <item>为谁唱离歌对谁说情话给谁写天涯</item>
        <item>越不过的是沧海，看不透的是人心</item>
        <item>每個人都像很有默契的回避與自己有關的一些話題和事</item>
        <item>就算没有人向我点头，我也不会放弃飞翔</item>
        <item>爱是一种牵挂，无论步迹到哪里，心却系在哪披肩秀发的发梢</item>
    </string-array>

</resources>
