<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.chenshun.learnsummarize.ui.activity.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:icon="@mipmap/menu_home"
            android:title="@string/homepage"/>
        <item
            android:id="@+id/navigation_item_source"
            android:checked="true"
            android:icon="@mipmap/menu_source"
            android:title="@string/welfare"/>
        <item
            android:id="@+id/navigation_item_blog"
            android:icon="@mipmap/menu_blog"
            android:title="@string/my_blog"/>
        <item
            android:id="@+id/navigation_item_custom_view"
            android:icon="@mipmap/menu_custom_view"
            android:title="@string/customer_view"/>
        <item
            android:id="@+id/navigation_item_snackbar"
            android:icon="@mipmap/menu_custom_view"
            android:title="@string/snackbar_demo"/>
        <item android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/navigation_item_switch_theme"
                    android:checkable="true"
                    android:icon="@mipmap/menu_skin"
                    android:title="@string/topics_skin"/>
                <item
                    android:id="@+id/navigation_item_about"
                    android:checkable="true"
                    android:icon="@mipmap/menu_about"
                    android:title="@string/about"/>
            </menu>
        </item>
    </group>
</menu>
